--- a/views/partials/app-sidebar.ejs
+++ b/views/partials/app-sidebar.ejs
@@ -74,7 +74,7 @@
         { href: '/tmdb-data', label: 'TMDB Data', icon: 'database', page: 'tmdb-data' },
         { href: '/data-hygiene', label: 'Data Hygiene', icon: 'database', page: 'data-hygiene' },
         { href: '/logs', label: 'Logs', icon: 'file-text', page: 'logs' },
-        { href: '/debug', label: 'Debug', icon: 'bug', page: 'debug' },
+        { href: '/debug', label: 'Debug', icon: 'search', page: 'debug' },
         { href: '/settings', label: 'Settings', icon: 'settings', page: 'settings' },
       ];
     %>
@@ -87,7 +87,14 @@
                     : 'hover:bg-gray-100 dark:hover:bg-white/10 text-gray-700 dark:text-gray-300' %>"
          aria-label="<%= i.label %>">
         <span class="w-5 h-5 inline-block flex-shrink-0">
-          <i data-icon="<%= i.icon %>"></i>
+          <% if (i.icon === 'search') { %>
+            <!-- Debug icon: magnifying glass -->
+            <svg fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z"/>
+            </svg>
+          <% } else { %>
+            <i data-icon="<%= i.icon %>"></i>
+          <% } %>
         </span>
         <span><%= i.label %></span>
       </a>
