--- a/views/debug.ejs
+++ b/views/debug.ejs
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Debug - desiarr</title>
+  <link rel="icon" type="image/svg+xml" href="/assets/desiarr-logo.svg">
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="stylesheet" href="/css/app.css">
   <style>
@@ -308,6 +309,7 @@
       });
     <% } %>
   </script>
+  <script src="/js/ui.js"></script>
 </body>
 </html>
 
